Fixed auth footer on mobile and bump version 2.0.113

--- a/src/scss/layout/auth/index.scss
+++ b/src/scss/layout/auth/index.scss
@@ -144,7 +144,7 @@
   }
 
   footer {
-    position: relative;
+    position: relative !important;
     text-align: center;
   }
 }
